kubernetes/kgcash-2018-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kgcash-nodeport
  labels:
    app: kgcash
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: kgcash
    tier: frontend
