kubernetes/kgcash-2018-ingress-tls.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: kgcash-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: kgcash-ip
    networking.gke.io/managed-certificates: kgcash-managed-certificate
  labels:
    app: kgcash
spec:
  backend:
    serviceName: kgcash-nodeport
    servicePort: 8080
